Fixed Home button not scrolling on mobile and text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ svg {
     font-size: 8rem;
 }
 
+.aboutMeHeader {
+    font-size: 6rem;
+    text-align: center;
+    display: block;
+}
 /* Code for Strengths */
 
 .strengthsPara {
@@ -223,6 +228,10 @@ footer {
 
     .howToReach {
         width: 95%;
+    }
+
+    .aboutMeHeader {
+        font-size: 4rem;
     }
 }
 
